Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetBoolObj.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Boolean> yoda
        Boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
