Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjTextRetBoolObjFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        Text two
        two:SetValue("green")
        Yoda<Text, Text, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
